force-app/main/default/objects/Entity_Address__c/Entity_Address__c.object-meta.xml
<CustomObject>
    <label>Entity Address</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entity Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>