force-app/main/default/objects/Entity_Address__c/fields/Address_Type_Selected__c.field-meta.xml
<CustomField>
    <fullName>Address_Type_Selected__c</fullName>
    <label>Address Type Selected</label>
    <length>50</length>
    <type>Text</type>
</CustomField>