force-app/main/default/objects/Entity_Address__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <label>Entity</label>
    <referenceTo>Entity__c</referenceTo>
    <relationshipLabel>Entity Addresses</relationshipLabel>
    <relationshipName>Entity_Addresses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>