force-app/main/default/objects/Entity_Address__c/fields/Entity_Contact__c.field-meta.xml
<CustomField>
    <fullName>Entity_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entity Contact</label>
    <referenceTo>Entity_Contact__c</referenceTo>
    <relationshipLabel>Entity Addresses</relationshipLabel>
    <relationshipName>Entity_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>